--- a/Places/Views/Shared/_Layout.cshtml
+++ b/Places/Views/Shared/_Layout.cshtml
@@ -20,9 +20,10 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                             @*<li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                            <li>@Html.ActionLink("Places", "Index", "Place")</li>
                             <li>@Html.ActionLink("Countys", "Index", "County")</li>
                         </ul>
                     </nav>
