--- a/Places/Views/Place/Index.cshtml
+++ b/Places/Views/Place/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.ZipCode)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CountyID)
+            @Html.DisplayNameFor(model => model.County)
         </th>
         <th></th>
     </tr>
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.ZipCode)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CountyID)
+            @Html.DisplayFor(modelItem => item.County.CountyName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.PlaceID }) |
