--- a/Places/Views/Place/Edit.cshtml
+++ b/Places/Views/Place/Edit.cshtml
@@ -31,11 +31,12 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.CountyID)
+            @Html.LabelFor(model => model.County)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.CountyID)
-            @Html.ValidationMessageFor(model => model.CountyID)
+            @*@Html.EditorFor(model => model.CountyID)
+            @Html.ValidationMessageFor(model => model.CountyID)*@
+            @Html.DropDownList("CountyList")
         </div>
 
         <p>
